crates/shipper/src/runtime/policy/snapshots/shipper__runtime__policy__snapshot_tests__snapshot_fast_all_flags_true.snap
---
source: crates/shipper/src/runtime/policy/mod.rs
assertion_line: 587
expression: effects
---
PolicyEffects {
    run_dry_run: false,
    check_ownership: false,
    strict_ownership: false,
    readiness_enabled: false,
}
