crates/shipper/src/runtime/policy/snapshots/shipper__runtime__policy__snapshot_tests__snapshot_policy_kind_safe.snap
---
source: crates/shipper/src/runtime/policy/mod.rs
assertion_line: 600
expression: "PolicyKind::Safe"
---
Safe
