crates/shipper/src/runtime/policy/snapshots/shipper__runtime__policy__snapshot_tests__snapshot_safe_all_enabled.snap
---
source: crates/shipper/src/runtime/policy/mod.rs
assertion_line: 517
expression: effects
---
PolicyEffects {
    run_dry_run: true,
    check_ownership: true,
    strict_ownership: true,
    readiness_enabled: true,
}
